[package]
name = "wodbook-api"
version = "0.1.0"
authors = ["Egill Sveinbjörnsson <egillsveinbjorns@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4"
actix-multipart = "0.6.0"
bson = "2.5.0"
log = "0.4.16"
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
jsonwebtoken = "8.2.0"
chrono = "0.4.23"
uuid = { version = "1.3", features = ["serde", "v4"] }
futures = "0.3.26"
dotenv = "0.15.0"
config = "0.13.3"
derive_more = "0.99.17"
oas3 = "0.2.1"
rusqlite = { version = "0.28.0", features = ["bundled", "blob"] }
ring = "0.16.20"
data-encoding = "2.3.3"

[dependencies.mongodb]
version = "2.4.0"
default-features = false
features = ["async-std-runtime"]

[dev-dependencies]
futures-await-test = "0.3.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
