[package]
name = "wodbook-api"
version = "0.1.0"
authors = ["Egill Sveinbjörnsson <egillsveinbjorns@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4"
actix-multipart = "0.6.1"
bson = "2.9.0"
log = "0.4.21"
env_logger = "0.11.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
jsonwebtoken = "9.2.0"
chrono = "0.4.35"
uuid = { version = "1.7", features = ["serde", "v4"] }
futures = "0.3.30"
dotenv = "0.15.0"
config = "0.14.0"
derive_more = "0.99.17"
oas3 = "0.4.0"
rusqlite = { version = "0.30.0", features = ["bundled", "blob"] }
ring = "0.17.8"
data-encoding = "2.5.0"

[dependencies.mongodb]
version = "2.8.1"
default-features = false
features = ["async-std-runtime"]

[dev-dependencies]
futures-await-test = "0.3.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
